Use JDK 20/21